# python-getotp

./: .gitignore  README.md  pyproject.toml  setup.py
getotp/: apps.py  auth.py  client.py  forms.py  models.py  urls.py  views.py
getotp/migrations/: 0001_initial.py
getotp/templates/getotp/login/: start.html
getotp/tests/: conftest.py  login_tests.py  otp_tests.py  urls_tests.py
tests/: test_getotp.py
